issue #72 queue discovery now works. Transactions for queue doesn't...
Now when we talk directly to TM from casual-queue we need to make sure
current transaction "knows" that it has "external" resources involved.
As we do with regular tp(a)calls.

--- a/middleware/queue/makefile.cmk
+++ b/middleware/queue/makefile.cmk
@@ -149,7 +149,7 @@ queue_client = LinkExecutable( 'bin/casual-queue-admin',
     [
         Compile( 'source/broker/admin/client.cpp'),
      ], 
-   [common, queue_api, 'casual-common', 'casual-sf'])
+   [common, queue_api, 'casual-common', 'casual-sf', 'casual-xatmi'])
  
  
 Install( queue_client, '$(CASUAL_HOME)/internal/bin')
