--- a/middleware/test/makefile.cmk
+++ b/middleware/test/makefile.cmk
@@ -39,7 +39,7 @@ target = LinkServer( 'bin/test',
 		'casual-queue-api'
 	],
 	'source/template_server.yaml',
-	['rm-mockup', 'casual-queue-rm'],
+	['rm-mockup'],
 	'../configuration/resources.yaml')
 
 install_bin.append( target)
