--- a/jenkinsfile
+++ b/jenkinsfile
@@ -36,7 +36,7 @@ node {
 
    stage('Build/Unittest Ubuntu') {
 
-       bitbucketStatusNotify: buildState: 'IN PROGRESS', buildKey: 'ubuntu', buildName: 'ubuntu'
+       bitbucketStatusNotify buildState: 'IN PROGRESS', buildKey: 'ubuntu', buildName: 'ubuntu'
 
        build( 'ubuntucompile', 'casual/ubuntu')
 
