issue #12, issue #59 logging and update examples with new logging semantics

--- a/middleware/example/domain/multiple/medium/domain1/domain.env
+++ b/middleware/example/domain/multiple/medium/domain1/domain.env
@@ -15,5 +15,7 @@ export CASUAL_DOMAIN_HOME=$HOME/casual/example/domain/multiple/medium/domain1
 
 #
 # Defines what will be logged.
+# 
+# See: <repo>/middleware/common/log.md for more information about loggin
 #
 export CASUAL_LOG='(error|warning|information)'
