--- a/middleware/example/domain/single/minimal/domain.env
+++ b/middleware/example/domain/single/minimal/domain.env
@@ -1,20 +1,12 @@
-
-
 #
-# CASUAL_HOME - where casual installation is located
+# pre requirements:
 #
-export CASUAL_HOME=/opt/casual
-
+# The following has to be set to match your installation of casual:
+# 
+# CASUAL_HOME
+# PATH  - to include casual binaries
+# LD_LIBRARY_PATH - to include casual libraries
 #
-# Setting up PATH. Make sure repo-paths is before install-path, so that you using the stuff you're 
-# building
-#
-export PATH=$CASUAL_HOME/bin:$PATH
-
-#
-# So loader can find casual libraries
-#
-export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CASUAL_HOME/lib
 
 #
 # CASUAL_DOMAIN_HOME - this domain
@@ -23,5 +15,7 @@ export CASUAL_DOMAIN_HOME=$HOME/casual/domains/minimal
 
 #
 # Defines what will be logged.
+# 
+# See: <repo>/middleware/common/log.md for more information about loggin
 #
-export CASUAL_LOG=error,warning,information
+export CASUAL_LOG='(error|warning|information)'
