issue #81 fixed some warnings

--- a/middleware/example/env/casual.env
+++ b/middleware/example/env/casual.env
@@ -65,5 +65,8 @@ export CASUAL_DOMAIN_HOME=$HOME/test/casual
 
 #
 # Defines what will be logged.
+# 
+# See: <repo>/middleware/common/log.md for more information about loggin
 #
-export CASUAL_LOG=%
+export CASUAL_LOG='(error|warning|information)'
+
