Adding LD_LIBRARY_PATH

--- a/pipeline/jenkinsfile
+++ b/pipeline/jenkinsfile
@@ -55,7 +55,7 @@ node {
        export CASUAL_HOME=$current_dir/usr/local/casual
        export CASUAL_DOMAIN_HOME=$current_dir/test/casual
        export CASUAL_BUILD_HOME=$current_dir/casual/middleware
-       export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$current_dir/casual/middleware/common/bin
+       export LD_LIBRARY_PATH=\$LD_LIBRARY_PATH:$current_dir/casual/middleware/common/bin
        python $current_dir/casual/thirdparty/setup/install_nginx.py
        """
 
