--- a/middleware/buffer/makefile.cmk
+++ b/middleware/buffer/makefile.cmk
@@ -66,7 +66,7 @@ LinkUnittest( 'bin/test-buffer',
     Compile( 'unittest/isolated/source/test_string_buffer.cpp'),
    ],
    [ 
-    lib_buffer, 'casual-common', 'casual-xatmi'
+    lib_buffer, 'casual-common', 'casual-xatmi', 'casual-unittest'
    ])  
    
 
