--- a/pipeline/jenkinsfile
+++ b/pipeline/jenkinsfile
@@ -3,6 +3,7 @@
 def backend_builder = '''#! /bin/sh
 umask 000
 cd /git/casual
+rm -rf /middleware/.casual/unittest/.singleton/.domain-singleton
 casual-make make && casual-make clean && casual-make compile && casual-make link 
 ISOLATED_UNITTEST_DIRECTIVES="--gtest_output='xml:report.xml'" casual-make test
 casual-make install
