--- a/pipeline/jenkinsfile
+++ b/pipeline/jenkinsfile
@@ -50,7 +50,7 @@ node {
           tools: [[$class: 'GoogleTestType', pattern: '**/report.xml']]])
 
        archive includes: '**/casual.log'
-       archive includes: 'casual/casual.tar'
+       archive includes: 'casual/casual-middleware.tar'
    }
    
    stage('Build Nginx Ubuntu') {
@@ -63,8 +63,11 @@ node {
        export CASUAL_BUILD_HOME=$current_dir/casual/middleware
        export LD_LIBRARY_PATH=\$LD_LIBRARY_PATH:$current_dir/casual/middleware/common/bin
        python $current_dir/casual/thirdparty/setup/install_nginx.py
+       cd $current_dir/usr/local/casual
+       tar cvf $current_dir/casual-webserver.tar nginx
        """
 
+       archive includes: '**/casual-webserver.tar'
    }
 
 
