--- a/middleware/gateway/makefile.cmk
+++ b/middleware/gateway/makefile.cmk
@@ -31,7 +31,8 @@ common_archive = LinkArchive( 'bin/casual-gateway-common',
     [
        Compile( 'source/handle.cpp'),
        Compile( 'source/environment.cpp'),
-       Compile( 'source/outbound/routing.cpp'),       
+       Compile( 'source/outbound/routing.cpp'),
+       Compile( 'source/outbound/gateway.cpp'),    
        Compile( 'source/inbound/cache.cpp'),
        Compile( 'source/transform.cpp'),
        Compile( 'source/message.cpp'),
