--- a/middleware/example/domain/multiple/medium/domainA/configuration/domain.yaml
+++ b/middleware/example/domain/multiple/medium/domainA/configuration/domain.yaml
@@ -10,9 +10,15 @@ domain:
     - path: casual-queue-broker
       instances: 1
 
-    # advertises casual.example.echo 
+    # advertises casual.example.echo and casual.example.rollback
     - path: ${CASUAL_HOME}/example/bin/casual-example-server
       instances: 1 # how many instances should be started
+
+    # forward from queueA1  to service 'casual.example.rollback'
+    # which will result in the message will end up on error queue
+    - path: casual-queue-forward-service
+      instances: 1
+      arguments: [ --forward, queueA1, casual.example.rollback]
 
   #
   # Queue configuration
