Improved build instructions

--- a/middleware/example/env/casual.env
+++ b/middleware/example/env/casual.env
@@ -1,72 +1,93 @@
-
 #
-# Starting point
-#
-CASUAL_REPO_ROOT=$HOME/git
-
-#
-# CASUAL_TOOLS - location of tools
-#
-export CASUAL_TOOLS_HOME=$CASUAL_REPO_ROOT/casual
-export PYTHONPATH=$CASUAL_REPO_ROOT
-
+# Starting point. The cloned repo
 # 
-# Build 
+# This environment variable is the only specific casual environment variable
+# needed when building casual (it's used internal to know where to log and stuff 
+# like that)
 #
-# CASUAL_BUILD_HOME - where to build
-# 
-export CASUAL_BUILD_HOME=$CASUAL_REPO_ROOT/casual/middleware
+export CASUAL_BUILD_HOME=$HOME/git/test/casual
 
 #
-# YAML implementation: yaml-cpp  
+# PYTHONPATH so casual-make and other python stuff works
 #
+export PYTHONPATH=$CASUAL_BUILD_HOME/..:$PYTHONPATH
+
+#
+# Third party dependencies.
+# 
+# These are separated to make it clear what casual
+# needs.
+#
+# These are only used in this file to help set 
+# CASUAL_OPTIONAL_INCLUDE_PATHS and
+# CASUAL_OPTIONAL_LIBRARY_PATHS.
+#
+# You can remove the ones you've got installed on 
+# a standard path
+#
+
 YAML_INCLUDE_PATH=/usr/local/include
 YAML_LIBRARY_PATH=/usr/lib/x86_64-linux-gnu
-#
-# JSON implementation: json-c 
-# 
-# Could, of course, be installed some other place... 
-#
+
 JSON_INCLUDE_PATH=/usr/local/include
 JSON_LIBRARY_PATH=/usr/lib/x86_64-linux-gnu
 
+PUGI_INCLUDE_PATH=/usr/local/include
+PUGI_LIBRARY_PATH=/usr/lib/x86_64-linux-gnu
+
+
+# Here we're using casual provided gtest
+GTEST_INCLUDE_PATH=$CASUAL_BUILD_HOME/thirdparty/unittest/gtest/include
+GTEST_LIBRARY_PATH=$CASUAL_BUILD_HOME/thirdparty/unittest/gtest/bin
+
+
 #
 # Optional paths. space separated list of paths
-# Can be used when third-party-libraries is installed outside standard paths
+# 
+# These are used where casual has depdendencies to 
+# third party libraries, in the build-chain.
+# 
+# You could declare the paths directly here instead of
+# via the intermediate variables. 
 #
-# If you're building yaml, json, xml yourself and installed path is not a standard path, 
-# make sure they're present here.
-#
-export CASUAL_OPTIONAL_INCLUDE_PATHS="$CASUAL_TOOLS_HOME/thirdparty/unittest/gtest/include $YAML_INCLUDE_PATH $JSON_INCLUDE_PATH"
-export CASUAL_OPTIONAL_LIBRARY_PATHS="$CASUAL_TOOLS_HOME/thirdparty/unittest/gtest/bin $YAML_LIBRARY_PATH $JSON_LIBRARY_PATH"
+export CASUAL_OPTIONAL_INCLUDE_PATHS="\
+$GTEST_INCLUDE_PATH \
+$YAML_INCLUDE_PATH \
+$JSON_INCLUDE_PATH \
+$PUGI_INCLUDE_PATH"
+
+export CASUAL_OPTIONAL_LIBRARY_PATHS="\
+$GTEST_LIBRARY_PATH \
+$YAML_LIBRARY_PATH \
+$JSON_LIBRARY_PATH \
+$PUGI_LIBRARY_PATH"
 
 
+#
+# Setting up PATH. Make sure build-path is "first" so you're sure you're using what you're
+# building
+#
+export PATH=$CASUAL_BUILD_HOME/bin:$PATH
+
 
 #
-# CASUAL_HOME - where to install
+# So our tools (build-server in particular) finds dependent libs
+#
+export LD_LIBRARY_PATH=$CASUAL_BUILD_HOME/bin:$LD_LIBRARY_PATH
+
+
+#
+# CASUAL_HOME - used when "installing", that is, copy all files that make up 
+# the casual product to a specific "place" (this "place" is also used when package 
+# casual to a proper installation)
 #
 export CASUAL_HOME=$HOME/usr/local/casual
 
-#
-# Setting up PATH. Make sure repo-paths is before install-path, so that you using the stuff you're 
-# building
-#
-export PATH=$CASUAL_BUILD_HOME/tools/bin:$CASUAL_TOOLS_HOME/bin:$CASUAL_HOME/bin:$PATH
-
-#
-# Temporary needed for casual-build-server to work on linux
-#
-export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CASUAL_HOME/lib:$CASUAL_BUILD_HOME/configuration/bin:$CASUAL_BUILD_HOME/common/bin:$CASUAL_BUILD_HOME/serviceframework/bin:$CASUAL_BUILD_HOME/xatmi/bin
-
-#
-# CASUAL_DOMAIN_HOME - where to execute
-#
-export CASUAL_DOMAIN_HOME=$HOME/test/casual
 
 #
 # Defines what will be logged.
 # 
-# See: <repo>/middleware/common/log.md for more information about loggin
+# See: $CASUAL_BUILD_HOME/middleware/common/log.md for more information about loggin
 #
 export CASUAL_LOG='(error|warning|information)'
 
