Changing user in docker

--- a/pipeline/jenkinsfile
+++ b/pipeline/jenkinsfile
@@ -47,21 +47,23 @@ COPY casual/start.sh /opt/casual/start.sh
 
 RUN cd /opt/casual && tar xf casual-middleware.tar && tar xf casual-webserver.tar && unzip casual-webapp.zip && chmod 755 /opt/casual/start.sh
 
+RUN useradd -ms /bin/bash casual
+
+
+RUN mkdir -p $CASUAL_DOMAIN_HOME
+RUN cp -r /opt/casual/example/domain/single/minimal/* $CASUAL_DOMAIN_HOME/.
+RUN cp $CASUAL_HOME/configuration/example/resources.yaml $CASUAL_HOME/configuration/.
+RUN chown -R casual $CASUAL_DOMAIN_HOME
+RUN ln -s /dev/stdout $CASUAL_DOMAIN_HOME/casual.log
+
+USER casual
+WORKDIR $CASUAL_DOMAIN_HOME
+
 ENV CASUAL_HOME /opt/casual
 ENV PATH $CASUAL_HOME/bin:$PATH
 ENV LD_LIBRARY_PATH $LD_LIBRARY_PATH:$CASUAL_HOME/lib
 ENV CASUAL_DOMAIN_HOME /test/casual
 ENV CASUAL_LOG ".*"
-
-RUN mkdir -p $CASUAL_DOMAIN_HOME
-RUN cp -r /opt/casual/example/domain/single/minimal/* $CASUAL_DOMAIN_HOME/.
-RUN cp $CASUAL_HOME/configuration/example/resources.yaml $CASUAL_HOME/configuration/.
-RUN chown -R 1000 $CASUAL_DOMAIN_HOME
-RUN ln -s /dev/stdout $CASUAL_DOMAIN_HOME/casual.log
-
-WORKDIR $CASUAL_DOMAIN_HOME
-
-USER 1000
 
 ENTRYPOINT ["/opt/casual/start.sh"]
 '''
