Changing user on nginx directory

--- a/pipeline/jenkinsfile
+++ b/pipeline/jenkinsfile
@@ -59,7 +59,7 @@ RUN mkdir -p $CASUAL_DOMAIN_HOME
 RUN cp -r /opt/casual/example/domain/single/minimal/* $CASUAL_DOMAIN_HOME/.
 RUN cp $CASUAL_HOME/configuration/example/resources.yaml $CASUAL_HOME/configuration/.
 RUN chown -R casual $CASUAL_DOMAIN_HOME
-RUN chown -R casual $CASUAL_HOME/nginx/logs
+RUN chown -R casual $CASUAL_HOME/nginx
 RUN ln -s /dev/stdout $CASUAL_DOMAIN_HOME/casual.log
 
 USER casual
