--- a/pipeline/jenkinsfile
+++ b/pipeline/jenkinsfile
@@ -8,12 +8,18 @@ umask 000
 cd /git/casual
 rm -rf middleware/.casual/unittest/.singleton/.domain-singleton
 casual-make make && casual-make clean && casual-make compile && casual-make link 
-ISOLATED_UNITTEST_DIRECTIVES="--gtest_output='xml:report.xml'" casual-make test
 casual-make install
 cd /usr/local/casual
 tar cvf /git/casual/casual-middleware.tar .
 '''
 
+def backend_builder_unittest = '''#! /bin/sh
+umask 000
+cd /git/casual
+rm -rf middleware/.casual/unittest/.singleton/.domain-singleton
+casual-make -d -a --use-valgrind make && casual-make clean && casual-make -d -a --use-valgrind compile && casual-make -d -a --use-valgrind link 
+ISOLATED_UNITTEST_DIRECTIVES="--gtest_output='xml:report.xml'" casual-make test
+'''
 //
 // Script for the frontend builder
 //
@@ -100,18 +106,24 @@ node {
       checkout scm
    }
 
-   stage('Build backend/Unittest Ubuntu') {
+   stage('Build backend - Unittest/CodeCoverage') {
 
-       build( 'ubuntucompile', 'casual/ubuntu', backend_builder)
+       build( 'ubuntucompile', 'casual/ubuntu', backend_builder_unittest)
 
        step([$class: 'XUnitBuilder',
           thresholds: [[$class: 'FailedThreshold', failureThreshold: '1']],
           tools: [[$class: 'GoogleTestType', pattern: '**/report.xml']]])
 
+   }
+
+   stage('Build backend - Release') {
+
+       build( 'ubuntucompile', 'casual/ubuntu', backend_builder)
+
        archive includes: '**/casual.log'
        archive includes: 'casual/casual-middleware.tar'
    }
-   
+
    stage('Build Nginx Ubuntu') {
        
        def current_dir = pwd()
@@ -147,6 +159,14 @@ node {
 
        sh """
        docker build -t casual-test-ubuntu -f casual/Dockerfile .
+       """
+   }
+
+   stage('Publishing to dockerhub') {
+
+       sh """
+       docker tag -f casual-test-ubuntu casual/middleware:latest
+       docker push casual/middleware
        """
    }
 }
