--- a/middleware/configuration/makefile.cmk
+++ b/middleware/configuration/makefile.cmk
@@ -30,8 +30,12 @@ lib_configuration = LinkLibrary( 'bin/casual-configuration',
         Compile( 'source/serverdefinition.cpp'),
         Compile( 'source/queue.cpp'),
         Compile( 'source/gateway.cpp'),
-        #Compile( 'source/transaction.cpp'),
-        #Compile( 'source/internal/transaction.cpp'),
+        Compile( 'source/server.cpp'),
+        Compile( 'source/service.cpp'),
+        Compile( 'source/group.cpp'),
+        Compile( 'source/transaction.cpp'),
+        
+        Compile( 'source/message/transform.cpp'),
     ],
     ['casual-common',
     'casual-sf'])
@@ -49,8 +53,9 @@ LinkUnittest( 'bin/test-casual-configuration',
         Compile( 'unittest/isolated/source/test_xa_switch.cpp'),
         Compile( 'unittest/isolated/source/test_queue.cpp'),
         Compile( 'unittest/isolated/source/test_gateway.cpp'),
+        Compile( 'unittest/isolated/source/test_message.cpp'),
    ],
-   [ lib_configuration, 'casual-sf', 'casual-common', 'casual-mockup'])  
+   [ lib_configuration, 'casual-sf', 'casual-common', 'casual-mockup', 'casual-unittest'])  
    
 #
 # Install
