--- a/middleware/example/env/casual.env
+++ b/middleware/example/env/casual.env
@@ -5,7 +5,7 @@
 # needed when building casual (it's used internal to know where to log and stuff 
 # like that)
 #
-export CASUAL_BUILD_HOME=$HOME/git/test/casual
+export CASUAL_BUILD_HOME=$HOME/git/casual
 
 #
 # PYTHONPATH so casual-make and other python stuff works
