--- a/middleware/tools/makefile.cmk
+++ b/middleware/tools/makefile.cmk
@@ -70,13 +70,22 @@ target = LinkExecutable( 'bin/casual-service-describe',
 install_bin.append( target)
 
 
-target = LinkExecutable( 'bin/casual-log-format',
-   [ Compile( 'log/source/format.cpp')],
-   [ 'casual-common'])
+#
+# TODO: if we keep the python implementation we need to package python "correct"?
+#
+install_bin.append( 'log/casual-log')
+install_bin.append( 'log/casual-log-format')
+install_bin.append( 'log/color.py')
 
-install_bin.append( target)
+#target = LinkExecutable( 'bin/casual-log-format',
+#   [ Compile( 'log/source/format.cpp')],
+#   [ 'casual-common'])
+#
+# install_bin.append( target)
 
 
 Install( install_bin, '$(CASUAL_HOME)/bin')
+
+
 
 
